users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: magnit002/tezdeals-users:1.0.16
          imagePullPolicy: Always
      imagePullSecrets:
        - name: dockersecret
---
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  selector:
    app: users
  ports:
    - name: users
      protocol: TCP
      port: 3004
      targetPort: 3004
