ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
        - path: /v1/users/?(.*)
          backend:
            serviceName: users-srv
            servicePort: 3000
        - path: /v1/bookings/?(.*)
          backend:
            serviceName: bookings-srv
            servicePort: 3002
